force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>Logical file record that groups documents into folders (Application Forms, Statements, Reports, Uncategorized) for the Documents Lightning Web Component.</description>
    <label>Document</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>