force-app/main/default/objects/Document__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Folder bucket the file belongs to. Drives the folder cards on the Documents LWC.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Forms</fullName>
                <default>true</default>
                <label>Application Forms</label>
            </value>
            <value>
                <fullName>Statements</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Uncategorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>