force-app/main/default/objects/Document__c/fields/File_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>File_Size_KB__c</fullName>
    <description>File size in kilobytes. Stored as an integer (no decimals needed for the size badge).</description>
    <label>File Size (KB)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>