force-app/main/default/objects/Document__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <defaultValue>"PDF"</defaultValue>
    <description>File extension / type badge shown on the document row (PDF, DOCX, etc.).</description>
    <label>File Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>