force-app/main/default/objects/Document__c/listViews/All_Documents.listView-meta.xml
<ListView>
    <fullName>All_Documents</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>File_Type__c</columns>
    <columns>File_Size_KB__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Documents</label>
</ListView>